# IG-minimal

./: CMakeLists.txt  README.md  conanfile.txt
ig/: log.h  timer.h
igui/: CMakeLists.txt  igui_export.h
igui/win32/: application.cpp  application.h  render_context.cpp  render_context.h  swap_group.cpp  swap_group.h  window.cpp  window.h
igx/: CMakeLists.txt  igx_export.h
igx/gl/: framebuffer.cpp  framebuffer.h  memory_object.cpp  memory_object.h  program.cpp  program.h  semaphore.cpp  semaphore.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
igx/vk/: command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  debug_utils_messenger.cpp  debug_utils_messenger.h  device.cpp  device.h  device_memory.cpp  device_memory.h  device_memory_handle.cpp  device_memory_handle.h  fence.cpp  fence.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  image_view.cpp  image_view.h  instance.cpp  instance.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  render_pass.cpp  render_pass.h  semaphore.cpp  semaphore.h  semaphore_handle.cpp  semaphore_handle.h  shader_module.cpp  shader_module.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h
vksync/: CMakeLists.txt  renderer.cpp  renderer_gl.cpp  renderer_gl.h  renderer_interop.cpp  renderer_interop.h  renderer_vk.cpp  renderer_vk.h  triangle.frag.sprv  triangle.vert  triangle.vert.sprv  triangle_gl.frag  triangle_gl.frag.sprv  triangle_gl.vert  triangle_gl.vert.sprv  triangle_renderer.cpp  triangle_renderer.h  vksync.cpp  vulkan_instance.cpp  vulkan_instance.h
vksync/interop/: frame_sync_exported.cpp  frame_sync_exported.h
