project (igx)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(Vulkan REQUIRED)

FILE(GLOB_RECURSE SRC  *.cpp *.h)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SRC})
ADD_LIBRARY(igx SHARED ${SRC})

TARGET_LINK_LIBRARIES(igx
PUBLIC 
	OpenGL::GL
	GLEW::GLEW
	Vulkan::Vulkan
)


